--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,11 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^15.7.2",
+    "graphql-tag": "^2.10.3",
+    "@apollo/client": "^3.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
